# clear-msig

./: .gitignore  README.md  test-full-flow.js  test-nostr-flow.js  test-nostr-flow.mjs  tsconfig.json
contract/: Cargo.toml  near-sdk-pin  rust-toolchain.toml
contract/src/: execute.rs  ft.rs  getrandom_shim.rs  integration_tests.rs  lib.rs  message.rs  verification.rs  vm_tests.rs
examples/: full-flow.ts
formal-verification/: Cargo.toml  README.md
formal-verification/src/: main.rs
reference/: index.ts
sandbox-tests/: e2e.ts  package-lock.json  package.json
sandbox-tests-rs/: Cargo.toml
sandbox-tests-rs/tests/: sandbox.rs
