[package]
name = "clear-msig"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "=5.9.0", features = ["legacy", "unit-testing"] }
serde_json = "1.0"
k256 = { version = "0.13", features = ["schnorr", "arithmetic"] }
getrandom = { version = "0.2", features = ["custom"] }
base64 = "0.22"

[dev-dependencies]
proptest = "1.5"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
