[package]
name = "clear-msig-formal"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "/Users/asil/.openclaw/workspace/verus-bin/verus-arm64-macos/vstd" }
builtin = { path = "/Users/asil/.openclaw/workspace/verus-bin/verus-arm64-macos/builtin" }
builtin_macros = { path = "/Users/asil/.openclaw/workspace/verus-bin/verus-arm64-macos/builtin_macros" }

[[bin]]
name = "verify"
path = "src/main.rs"
